{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 7,
  "lineage": "ba3e5858-646c-d020-8683-d1e5a8233205",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267430399:internet-gateway/igw-0437896327fa15c2a",
            "id": "igw-0437896327fa15c2a",
            "owner_id": "533267430399",
            "tags": {
              "Name": "Igw-Terra"
            },
            "tags_all": {
              "Name": "Igw-Terra"
            },
            "vpc_id": "vpc-00e66193d07c0a6f4"
          },
          "dependencies": [
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub-RT-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267430399:route-table/rtb-0a24a88759bf72dbd",
            "id": "rtb-0a24a88759bf72dbd",
            "owner_id": "533267430399",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0437896327fa15c2a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub-RT-Terra"
            },
            "tags_all": {
              "Name": "Pub-RT-Terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e66193d07c0a6f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw-Terraform",
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-RTA-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0079e9ea198802a30",
            "route_table_id": "rtb-0a24a88759bf72dbd",
            "subnet_id": "subnet-019f9c29f26128e9c"
          },
          "dependencies": [
            "aws_internet_gateway.Igw-Terraform",
            "aws_route_table.Pub-RT-Terra",
            "aws_subnet.Public-Subnet-Terraform",
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267430399:security-group/sg-06598eede03832033",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06598eede03832033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "533267430399",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e66193d07c0a6f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267430399:subnet/subnet-019f9c29f26128e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019f9c29f26128e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267430399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-Terraform"
            },
            "tags_all": {
              "Name": "Public-Subnet-Terraform"
            },
            "vpc_id": "vpc-00e66193d07c0a6f4"
          },
          "dependencies": [
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267430399:vpc/vpc-00e66193d07c0a6f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0190dff702104e767",
            "default_route_table_id": "rtb-0c64cd544b1008c00",
            "default_security_group_id": "sg-0e8ed118d811ac305",
            "dhcp_options_id": "dopt-078a4db026b33cabb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e66193d07c0a6f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c64cd544b1008c00",
            "owner_id": "533267430399",
            "tags": {
              "Name": "Vpc-Terraform"
            },
            "tags_all": {
              "Name": "Vpc-Terraform"
            }
          }
        }
      ]
    }
  ]
}